# LLMFightClub

./: .env.example  .replit  README.md  pyproject.toml  replit.md
docs/: 001-implementation-notes.md  2025-11-29-replit-setup.md  implementation-notes.md
prompts/: claude.yaml  gemini.yaml  gpt.yaml  grok.yaml  orchestrator.yaml
scripts/: test_openai.py
src/llm_fight_club/: config.py  devui_server.py  main.py  prompts.py
src/llm_fight_club/agents/: __init__.py  base.py  claude.py  gemini.py  gpt.py  grok.py  maf_agents.py  orchestrator.py
src/llm_fight_club/clients/: __init__.py  litellm_client.py
src/llm_fight_club/workflows/: __init__.py  group_chat.py
tests/: conftest.py
tests/unit/test_agents/: test_base.py  test_claude.py  test_gemini.py  test_gpt.py  test_grok.py
tests/unit/test_workflows/: test_group_chat.py
